# face-detection-streaming-system

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260505_0001_create_stream_tables.py  20260508_0001_upgrade_to_bigint.py
backend/app/: main.py
backend/app/api/: roi.py  video.py
backend/app/core/: __init__.py  config.py
backend/app/db/: base.py  models.py  repositories.py  session.py
backend/app/detection/: __init__.py  box.py  mediapipe_detector.py  types.py
backend/app/schemas/: roi.py  stream.py
backend/app/streaming/: __init__.py  annotator.py  decoder.py  hub.py  processor.py  types.py
backend/tests/: test_annotator.py  test_decoder.py  test_detection_box.py  test_health.py  test_hub.py  test_processor.py  test_roi_api.py  test_video_api.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx
frontend/src/components/ui/: DetectionOverlay.tsx  StatsDisplay.tsx  StatusHeader.tsx  TimelineView.tsx
frontend/src/hooks/: useStreaming.ts
frontend/src/services/: StreamingManager.ts
frontend/src/store/: streamingStore.ts
